
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int mode_t ;
typedef int fileHandle_t ;
typedef int fbuffer ;


 int CL_CDKeyValidate (char*,int *) ;
 int Com_Printf (char*,char*) ;
 int Com_sprintf (char*,int,char*,char const*) ;
 int FS_FCloseFile (int ) ;
 int FS_Printf (int ,char*) ;
 int FS_SV_FOpenFileWrite (char*) ;
 int FS_Write (char*,int,int ) ;
 int MAX_OSPATH ;
 int Q_strncpyz (char*,char const*,int) ;
 int umask (int) ;

__attribute__((used)) static void Com_WriteCDKey( const char *filename, const char *ikey ) {
 fileHandle_t f;
 char fbuffer[MAX_OSPATH];
 char key[17];

 mode_t savedumask;



 Com_sprintf(fbuffer, sizeof(fbuffer), "%s/q3key", filename);


 Q_strncpyz( key, ikey, 17 );

 if(!CL_CDKeyValidate(key, ((void*)0)) ) {
  return;
 }


 savedumask = umask(0077);

 f = FS_SV_FOpenFileWrite( fbuffer );
 if ( !f ) {
  Com_Printf ("Couldn't write CD key to %s.\n", fbuffer );
  goto out;
 }

 FS_Write( key, 16, f );

 FS_Printf( f, "\n// generated by quake, do not modify\r\n" );
 FS_Printf( f, "// Do not give this file to ANYONE.\r\n" );
 FS_Printf( f, "// id Software and Activision will NOT ask you to send this file to them.\r\n");

 FS_FCloseFile( f );
out:

 umask(savedumask);



}
