; ModuleID = '/home/carl/AnghaBench/lab/engine/code/qcommon/extr_common.c_Com_WriteCDKey.c'
source_filename = "/home/carl/AnghaBench/lab/engine/code/qcommon/extr_common.c_Com_WriteCDKey.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@MAX_OSPATH = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [9 x i8] c"%s/q3key\00", align 1
@.str.1 = private unnamed_addr constant [30 x i8] c"Couldn't write CD key to %s.\0A\00", align 1
@.str.2 = private unnamed_addr constant [40 x i8] c"\0A// generated by quake, do not modify\0D\0A\00", align 1
@.str.3 = private unnamed_addr constant [38 x i8] c"// Do not give this file to ANYONE.\0D\0A\00", align 1
@.str.4 = private unnamed_addr constant [76 x i8] c"// id Software and Activision will NOT ask you to send this file to them.\0D\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, i8*)* @Com_WriteCDKey to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @Com_WriteCDKey(i8* %0, i8* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i8*, align 8
  %7 = alloca i64, align 8
  %8 = alloca [17 x i8], align 16
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  store i8* %0, i8** %3, align 8
  store i8* %1, i8** %4, align 8
  %11 = load i32, i32* @MAX_OSPATH, align 4
  %12 = zext i32 %11 to i64
  %13 = call i8* @llvm.stacksave()
  store i8* %13, i8** %6, align 8
  %14 = alloca i8, i64 %12, align 16
  store i64 %12, i64* %7, align 8
  %15 = trunc i64 %12 to i32
  %16 = load i8*, i8** %3, align 8
  %17 = call i32 @Com_sprintf(i8* %14, i32 %15, i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str, i64 0, i64 0), i8* %16)
  %18 = getelementptr inbounds [17 x i8], [17 x i8]* %8, i64 0, i64 0
  %19 = load i8*, i8** %4, align 8
  %20 = call i32 @Q_strncpyz(i8* %18, i8* %19, i32 17)
  %21 = getelementptr inbounds [17 x i8], [17 x i8]* %8, i64 0, i64 0
  %22 = call i32 @CL_CDKeyValidate(i8* %21, i32* null)
  %23 = icmp ne i32 %22, 0
  br i1 %23, label %25, label %24

24:                                               ; preds = %2
  store i32 1, i32* %10, align 4
  br label %47

25:                                               ; preds = %2
  %26 = call i32 @umask(i32 63)
  store i32 %26, i32* %9, align 4
  %27 = call i32 @FS_SV_FOpenFileWrite(i8* %14)
  store i32 %27, i32* %5, align 4
  %28 = load i32, i32* %5, align 4
  %29 = icmp ne i32 %28, 0
  br i1 %29, label %32, label %30

30:                                               ; preds = %25
  %31 = call i32 @Com_Printf(i8* getelementptr inbounds ([30 x i8], [30 x i8]* @.str.1, i64 0, i64 0), i8* %14)
  br label %44

32:                                               ; preds = %25
  %33 = getelementptr inbounds [17 x i8], [17 x i8]* %8, i64 0, i64 0
  %34 = load i32, i32* %5, align 4
  %35 = call i32 @FS_Write(i8* %33, i32 16, i32 %34)
  %36 = load i32, i32* %5, align 4
  %37 = call i32 @FS_Printf(i32 %36, i8* getelementptr inbounds ([40 x i8], [40 x i8]* @.str.2, i64 0, i64 0))
  %38 = load i32, i32* %5, align 4
  %39 = call i32 @FS_Printf(i32 %38, i8* getelementptr inbounds ([38 x i8], [38 x i8]* @.str.3, i64 0, i64 0))
  %40 = load i32, i32* %5, align 4
  %41 = call i32 @FS_Printf(i32 %40, i8* getelementptr inbounds ([76 x i8], [76 x i8]* @.str.4, i64 0, i64 0))
  %42 = load i32, i32* %5, align 4
  %43 = call i32 @FS_FCloseFile(i32 %42)
  br label %44

44:                                               ; preds = %32, %30
  %45 = load i32, i32* %9, align 4
  %46 = call i32 @umask(i32 %45)
  store i32 0, i32* %10, align 4
  br label %47

47:                                               ; preds = %44, %24
  %48 = load i8*, i8** %6, align 8
  call void @llvm.stackrestore(i8* %48)
  %49 = load i32, i32* %10, align 4
  switch i32 %49, label %51 [
    i32 0, label %50
    i32 1, label %50
  ]

50:                                               ; preds = %47, %47
  ret void

51:                                               ; preds = %47
  unreachable
}

; Function Attrs: nounwind
declare i8* @llvm.stacksave() #1

declare dso_local i32 @Com_sprintf(i8*, i32, i8*, i8*) #2

declare dso_local i32 @Q_strncpyz(i8*, i8*, i32) #2

declare dso_local i32 @CL_CDKeyValidate(i8*, i32*) #2

declare dso_local i32 @umask(i32) #2

declare dso_local i32 @FS_SV_FOpenFileWrite(i8*) #2

declare dso_local i32 @Com_Printf(i8*, i8*) #2

declare dso_local i32 @FS_Write(i8*, i32, i32) #2

declare dso_local i32 @FS_Printf(i32, i8*) #2

declare dso_local i32 @FS_FCloseFile(i32) #2

; Function Attrs: nounwind
declare void @llvm.stackrestore(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
